[project]
name = "newsagent-mcp"
version = "0.1.0"
description = "MCP server for the NewsAgent Data news API — scored, classified Russian & English news for AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mcp>=1.2.0", "httpx>=0.27.0"]

[project.scripts]
newsagent-mcp = "newsagent_mcp:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
